welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:13: error: '=>' expected but integer literal found.
   	case >=3 => gauche()
               ^Poucet:14: error: '=>' expected but integer literal found.
   	case <=2 => droite()
               ^