welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var i = 0

do {
	
avance()
if (estSurBiscuit() ) {
	i=i+1
}
} while (!croisement())

  i match {
   	case >=3 => gauche()
   	case <=2 => droite()
   	 
   }

